--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^2.2.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "mongoose": "^8.16.0",
     "ws": "^8.18.2"
   }
 }
